@@ -527,6 +527,46 @@ function copyTriggersToHosts($srcTriggerIds, $dstHostIds, $srcHostId = null) {
 	return true;
 }
 
+/**
+ * Function split trigger expresion by '&' and '|', that all elements from first level would be separated.
+ *
+ * @param string $expresion		trigger expresion
+ *
+ * @return array
+ */
+function splitByFirstLevel($expresion) {
+	$pos = 0;
+	$level = 0;
+
+	while (isset($expresion[$pos])) {
+		switch ($expresion[$pos]) {
+			case '(':
+				++$level;
+				break;
+			case ')':
+				--$level;
+				break;
+			case '&':
+			case '|':
+				if (!$level) {
+					$tmpArr[] = trim(substr($expresion, 0, $pos));
+					$expresion = substr($expresion, $pos + 1);
+					$pos = -1;
+				}
+				break;
+			default:
+				break;
+		}
+		++$pos;
+	}
+
+	if ($expresion) {
+		$tmpArr[] = trim($expresion);
+	}
+
+	return $tmpArr;
+}
+
 function construct_expression($itemid, $expressions) {
 	$complite_expr = '';
 	$item = get_item_by_itemid($itemid);
@@ -538,7 +578,7 @@ function construct_expression($itemid, $expressions) {
 		return false;
 	}
 
-	$ZBX_PREG_EXPESSION_FUNC_FORMAT = '^(['.ZBX_PREG_PRINT.']*)([&|]{1})(([a-zA-Z_.\$]{6,7})(\\((['.ZBX_PREG_PRINT.']+){0,1}\\)))(['.ZBX_PREG_PRINT.']*)$';
+	$ZBX_PREG_EXPESSION_FUNC_FORMAT = '^(['.ZBX_PREG_PRINT.']*)([&|]{1})[(]*(([a-zA-Z_.\$]{6,7})(\\((['.ZBX_PREG_PRINT.']+?){0,1}\\)))(['.ZBX_PREG_PRINT.']*)$';
 	$functions = array('regexp' => 1, 'iregexp' => 1);
 	$expr_array = array();
 	$cexpor = 0;
